# Unbenanntes_Projekt

./: 404.html  README.md  config_cli.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
Unbenanntes Repository I/: Makefile  README.md  pyproject.toml
Unbenanntes Repository I/models/: modelsHousePricesGBR.pkl
Unbenanntes Repository I/modulo/: __init__.py
Unbenanntes Repository I/modulo/modeling/: __init__.py
Unbenanntes Repository I/notebooks/: __init__.py  nootebookHousePrices.ipynb  notebookChurn.ipynb  notebookIris.ipynb
api/: index.html
contribuindo/: index.html
docs/: index.md
estrutura/: index.html
exemplos/: index.html
instalacao/: index.html
models/: modelsChurnGBC.pkl
modulo/: __init__.py
modulo/modeling/: __init__.py  teste.py  treino.py
modulos/: index.html
modulos/dataset/: index.html
modulos/features/: index.html
modulos/plots/: index.html
modulos/teste/: index.html
modulos/treino/: index.html
notebooks/: nootebookHousePrices.ipynb  notebookIris.ipynb
search/: search_index.json
sobre/: index.html
stylesheets/: extra.css
