[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Modulo"
version = "0.0.1"
description = "inferno em forma de arquivo python usado para estudos"
authors = [
  { name = "Aurora Drumond" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Modulo"]
include = ["pyproject.toml", "Modulo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Modulo"]
force-sort-within-sections = true

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
]

[tool.setuptools]
packages = ["modulo", "modulo.modeling"]